# algo3-tp1

./: .travis.yml  CMakeLists.txt  DataGenerator.cpp  README.md
data/: CMakeLists.txt  DataGenerator.cpp  bt.csv  dyn.csv  impbt-inc.csv  impbt.csv
latex/: apendice.tex  crearpdf.sh  ej1.tex  ej2.tex  ej3.tex  problema.tex  resolucion.tex  resolucion.toc
lib/googletest/: Makefile
lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h
src/: Backtrack.cpp  Backtrack.h  Dynamic.cpp  Dynamic.h  ImprovedBacktrack.cpp  ImprovedBacktrack.h  Solver.h  Utils.cpp  Utils.h  backtrack.cpp  backtrack.h  ej1.cpp  ej2.cpp  ej3.cpp  main.cpp
test/: AbstractTest.h  BacktrackTest.cpp  CMakeLists.txt  DynamicTest.cpp  ImprovedBacktrackTest.cpp  PerformanceTest.cpp
